...
        groups: [
            AddMenuGroupConfig(
                name: String(localized: "Reuse Meal", comment: "Default add menu group"),
                methods: [.copyFromDay, .favorites, .frequent, .recent]
            ),
            AddMenuGroupConfig(
                name: String(localized: "Describe Meal", comment: "Default add menu group"),
                methods: [.manual, .siriPhrases, .voice, .text]
            ),
            AddMenuGroupConfig(
                name: String(localized: "Photo & Scan", comment: "Default add menu group"),
                methods: [.barcode, .photos, .camera]
            ),
...
